--- a/notebooks/config.yaml
+++ b/notebooks/config.yaml
@@ -8,7 +8,7 @@ _wandb:
     is_jupyter_run: false
     is_kaggle_kernel: false
     python_version: 3.10.4
-    start_time: 1663677456.357622
+    start_time: 1663921862.373762
     t:
       1:
       - 1
@@ -36,13 +36,13 @@ _wandb:
       - 5
 anneal:
   desc: null
-  value: 1.0
+  value: 0.5
 anneal_step:
   desc: null
-  value: 20
+  value: 5
 batch:
   desc: null
-  value: 6
+  value: 32
 dataset:
   desc: null
   value: shapenet
@@ -54,13 +54,13 @@ embedding:
   value: 4
 epochs:
   desc: null
-  value: 15
+  value: 30
 factor:
   desc: null
   value: 0.5
 fixed_points:
   desc: null
-  value: 1024
+  value: 256
 gpu:
   desc: null
   value: '0'
@@ -90,7 +90,7 @@ patience:
   value: 10
 pretrained:
   desc: null
-  value: true
+  value: false
 resume:
   desc: null
   value: false
@@ -99,4 +99,4 @@ sim_distance:
   value: cosine
 temperature:
   desc: null
-  value: 0.01
+  value: 0.8
