Individual miner + Strategy + Notebooks

--- a/notebooks/config.yaml
+++ b/notebooks/config.yaml
@@ -8,7 +8,7 @@ _wandb:
     is_jupyter_run: false
     is_kaggle_kernel: false
     python_version: 3.10.4
-    start_time: 1665060449.233309
+    start_time: 1665743465.635274
     t:
       1:
       - 1
@@ -42,7 +42,7 @@ anneal_step:
   value: 0
 batch:
   desc: null
-  value: 32
+  value: 16
 dataset:
   desc: null
   value: shapenet
@@ -51,10 +51,10 @@ dropout:
   value: 0.0
 embedding:
   desc: null
-  value: 16
+  value: 3
 epochs:
   desc: null
-  value: 25
+  value: 50
 factor:
   desc: null
   value: 0.5
@@ -66,7 +66,7 @@ gpu:
   value: '0'
 init_rescale:
   desc: null
-  value: 0.001
+  value: 0.01
 lr:
   desc: null
   value: 0.001
@@ -93,10 +93,10 @@ pretrained:
   value: false
 resume:
   desc: null
-  value: false
+  value: true
 sim_distance:
   desc: null
   value: cosine
 temperature:
   desc: null
-  value: 0.8
+  value: 0.2
