--- a/requirements.txt
+++ b/requirements.txt
@@ -221,7 +221,7 @@ trimesh==3.12.9
 typing_extensions==4.1.1
 urllib3==1.26.9
 virtualenv==20.16.3
-vtk==9.2.0rc1
+vtk==9.2.2
 wandb==0.12.21
 wcwidth==0.2.5
 webencodings==0.5.1
