--- a/notebooks/config.yaml
+++ b/notebooks/config.yaml
@@ -3,12 +3,12 @@ wandb_version: 1
 _wandb:
   desc: null
   value:
-    cli_version: 0.13.2
+    cli_version: 0.13.6
     framework: lightning
     is_jupyter_run: false
     is_kaggle_kernel: false
-    python_version: 3.10.4
-    start_time: 1667832414.424231
+    python_version: 3.10.8
+    start_time: 1671124293.913287
     t:
       1:
       - 1
@@ -17,7 +17,6 @@ _wandb:
       - 41
       - 53
       - 55
-      - 77
       2:
       - 1
       - 5
@@ -25,84 +24,55 @@ _wandb:
       - 41
       - 53
       - 55
-      - 77
       3:
       - 3
-      - 16
       - 23
-      4: 3.10.4
-      5: 0.13.2
+      4: 3.10.8
+      5: 0.13.6
       8:
       - 5
-anneal:
+anneal_factor:
   desc: null
   value: 2
 anneal_step:
   desc: null
   value: 0
-batch:
-  desc: null
-  value: 6
-category:
-  desc: null
-  value: Chair
 dataset:
   desc: null
-  value: shapenet
-dropout:
-  desc: null
-  value: 0.0
+  value: partnet
 embedding:
   desc: null
-  value: 6
-epochs:
+  value: 18
+fraction:
   desc: null
-  value: 50
-factor:
+  value: 1.2
+k:
   desc: null
-  value: 0.5
-fixed_points:
-  desc: null
-  value: 256
-gpu:
-  desc: null
-  value: '0'
-init_rescale:
-  desc: null
-  value: 0.01
-level:
-  desc: null
-  value: 3
+  value: 20
 lr:
   desc: null
-  value: 0.005
+  value: 0.001
 margin:
   desc: null
   value: 0.05
-max_scale:
-  desc: null
-  value: 0.999
-min_lr:
-  desc: null
-  value: 0.0001
-model:
+model_name:
   desc: null
   value: vn_dgcnn_partseg
 nn:
   desc: null
   value: null
-patience:
+num_class:
   desc: null
-  value: 10
-pretrained:
+  value: 18
+t_per_anchor:
   desc: null
-  value: false
-resume:
-  desc: null
-  value: false
-sim_distance:
-  desc: null
-  value: cosine
+  value: 50
 temperature:
   desc: null
-  value: 1
+  value: 1.0
+test_rotation:
+  desc: null
+  value: so3
+train_rotation:
+  desc: null
+  value: so3
